# connectanum-dart

./: .dockerignore  .gitignore  .gitlab-ci.yml  .tool-versions  .travis.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  ROADMAP_NEXT.md  STRUCTURE.md  analysis_options.yaml  chat.txt  ci-setup-dart.sh  codex.sh  dart_test.yaml  pubspec.yaml
.github/workflows/: dart-package-publish.yml  dart.yml  ktls-http2-benchmarks.yml  ktls-validation.yml  native-artifacts.yml  pub-dev-connectanum-auth-server.yml  pub-dev-connectanum-bench.yml  pub-dev-connectanum-client.yml  pub-dev-connectanum-core.yml  pub-dev-connectanum-mcp.yml  pub-dev-connectanum-router.yml  pub-dev-connectanum.yml  router-image.yml  wamp-profile-benchmarks.yml  wamp-profile-diagnostics.yml
deploy/docker/: Dockerfile  docker-compose.yml  router.yaml
deploy/k8s/: connectanum-router.yaml
deploy/systemd/: connectanum-router.service
docs/: README.md  dart_package_publishing.md  deployment.md  e2ee_ppt_research.md  examples.md  github_deployment_chain.md  grafana_transport_alerts_dashboard.json  http_bridge_design.md  ktls_research.md  mcp_integration_research.md  project_state.md  remote_auth_interop.md  router_auth_credentials.md  router_example.yaml  router_metrics.md  tls.md  wamp_profile_benchmarks.md  wamp_profile_support.md
docs/exec-plans/: 2026-04-21-autonomy-hardening.md  2026-04-21-ci-alignment.md  2026-04-21-e2ee-research-spike.md  2026-04-21-macos-native-runtime.md  2026-04-21-macos-remote-auth-tls.md  2026-04-21-transport-mbit-matrix-throughput.md  2026-04-22-bench-artifact-ci-gate.md  2026-04-22-ct-ffi-artifact-attestations.md  2026-04-22-ct-ffi-ci-artifacts.md  2026-04-22-ct-ffi-github-release-publishing.md  2026-04-22-ct-ffi-release-workflow-validation.md  2026-04-22-e2ee-key-selection-policy.md  2026-04-22-e2ee-native-provider-parity.md  2026-04-22-e2ee-negotiation-scaffolding.md  2026-04-22-e2ee-phase2-design.md  2026-04-22-e2ee-policy-adapters.md  2026-04-22-e2ee-runtime-context.md  2026-04-22-e2ee-runtime-defaults.md  2026-04-22-e2ee-session-provider-lane.md  2026-04-22-ktls-http2-benchmarks.md  2026-04-22-ktls-linux-validation.md  2026-04-22-ktls-prototype.md  2026-04-22-ktls-research-spike.md  2026-04-22-ktls-secure-wamp-benchmarks.md  2026-04-22-ktls-secure-wamp-throughput.md  2026-04-22-native-build-hook-packaging.md  2026-04-22-native-install-helper.md  2026-04-22-native-signature-bundles.md  2026-04-22-prebuilt-native-download-hooks.md  2026-04-22-public-surface-polish.md  (+331 more)
example/: main.dart  test_client_wampcs.dart
examples/quickstart/: README.md  (+2 more)
lib/: authentication.dart  cbor.dart  connectanum.dart  internet.dart  json.dart  msgpack.dart  protocol_processor.dart  socket.dart
native/bench/: Cargo.toml  README.md  bench_router.json  bench_tls.crt  bench_tls.key  connectanum_bench_artifact_alerts.yml  connectanum_router_alerts.yml  docker-compose.yml  prometheus.yml  remote_auth_service_ticket.txt  remote_auth_token.txt
native/bench/artifact_gate/: h2_ktls_benchmark.json  h3_multiplex_scaling.json  wamp_e2ee_throughput.json  wamp_final_release_features.json  wamp_publish_fanout_throughput.json  wamp_secure_throughput.json  wamp_transport_throughput.json
native/bench/grafana/dashboards/: bench_artifacts.json  bench_summary.json  router_transport_alerts.json
native/bench/grafana/provisioning/dashboards/: bench.yml
native/bench/grafana/provisioning/datasources/: prometheus.yml
native/bench/scenarios/: all_transports_smoke.toml  full_stack.toml  h1_smoke.toml  h2_ktls_benchmark.toml  h2_ktls_multiplex_scaling.toml  h2_ktls_multiplex_stability.toml  h2_multiplex_scaling.toml  h2_smoke.toml  h3_multiplex_scaling.toml  http_auth_smoke.toml  http_bearer_provider_smoke.toml  real_world_smoke.toml  remote_auth_rawsocket_cold_warm.toml  remote_auth_rawsocket_smoke.toml  runtime_thread_scaling.toml  throughput_smoke.toml  transport_mbit_matrix_smoke.toml  transport_mbit_matrix_throughput.toml  wamp_client_impl_smoke.toml  wamp_client_impl_throughput.toml  wamp_control_custom_smoke.toml  wamp_control_smoke.toml  wamp_e2ee_smoke.toml  wamp_e2ee_throughput.toml  wamp_final_release_features.toml  wamp_mixed_serializer_throughput.toml  wamp_payload_mode_smoke.toml  wamp_payload_mode_throughput.toml  wamp_ppt_lazy_smoke.toml  wamp_publish_fanout_throughput.toml  wamp_secure_smoke.toml  wamp_secure_throughput.toml  wamp_serializer_matrix.toml  wamp_smoke.toml  wamp_transport_throughput.toml  wamp_websocket_fragmentation_throughput.toml  worker_scaling.toml
native/bench/src/: artifacts.rs  lib.rs  report.rs
native/transport/ct_core/: Cargo.toml
native/transport/ct_core/src/: config.rs  http1_stream.rs  http_body.rs  http_stream.rs  io_stream.rs  ktls.rs  lib.rs  protocol.rs  rawsocket.rs  tls.rs  wamp.rs
native/transport/ct_core/src/platform/: linux.rs  mod.rs  unsupported.rs
native/transport/ct_core/tests/: wamp_cbor.rs  wamp_json.rs  wamp_msgpack.rs
native/transport/ct_core/tests/common/: mod.rs
native/transport/ct_ffi/: Cargo.toml
native/transport/ct_ffi/src/: callbacks.rs  lib.rs
native/transport/ct_ffi/src/runtime/: constants.rs  ffi.rs  mod.rs  state.rs
native/transport/ct_ffi/src/tests/: e2ee.rs  error_cases.rs  listen_flow.rs  mod.rs  router_config.rs  runtime_lifecycle.rs  unsupported.rs
test/: client_on_transport_io_events_test.dart  client_online_state_io_test.dart  client_online_state_web_test.dart  client_test.dart  protocol_processor_test.dart
tool/: check_public_artifact_references.py  filter_bench_scenario.py  ktls_http2_compare.py  ktls_http2_compare_repeats.py  render_native_release_notes.py  render_router_image_metadata.py  test_audit_github_deployment_chain.py  test_dart_package_publish_dry_run.py  test_filter_bench_scenario.py  test_ktls_http2_compare.py  test_mcp_consumer_package_boundary.py  test_package_native_artifact.py  test_public_artifact_references.py  test_render_native_release_notes.py  test_render_router_image_metadata.py  test_validate_native_release_intent.py  test_verification_scripts.py  validate_native_release_intent.py
(+107 files in other folders)
