[package]
name = "connectanum_bench_orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
h2 = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3"
hyper = { version = "0.14", features = ["client", "server", "http2", "tcp"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
quinn = { version = "0.11.7", features = ["rustls", "rustls-ring"] }
quinn-proto = { version = "0.11.13", features = ["rustls"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"

[dev-dependencies]
rcgen = "0.13"
