[package]
name = "connectanum_bench_orchestrator"
version = "3.0.0-beta"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bytes = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
h2 = "0.3"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hmac = "0.12"
http = "1.3"
hyper = { version = "0.14", features = ["client", "server", "http2", "tcp"] }
pbkdf2 = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
quinn = { version = "0.11.7", features = ["rustls", "rustls-ring"] }
quinn-proto = { version = "0.11.13", features = ["rustls"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
url = "2.5"

[dev-dependencies]
rcgen = "0.13"
