[package]
name = "ct_core"
version = "0.1.0"
edition = "2021"

[dependencies]
socket2 = "0.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde-value = "0.7"
rmp-serde = "1.3"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_ubjson = "0.2"
bytes = "1.7"
httparse = "1.9"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["std", "logging"] }
rustls-pemfile = "2.1"
h3 = { version = "0.0.8", default-features = false }
h3-quinn = { version = "0.0.10", default-features = false }
http = "1.3"

[features]
ffi-test = []
