[package]
name = "ct_core"
version = "3.0.0-beta"
edition = "2021"

[dependencies]
socket2 = "0.5"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "sync", "time", "macros", "io-util"] }
tokio-rustls = { version = "0.26", default-features = false }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde-value = "0.7"
rmp-serde = "1.3"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_ubjson = "0.2"
bytes = "1.7"
httparse = "1.9"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
quinn-proto = { version = "0.11", default-features = false, features = ["rustls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "logging"] }
rustls-pemfile = "2.1"
h3 = { version = "0.0.8", default-features = false }
h3-quinn = { version = "0.0.10", default-features = false }
h2 = { version = "0.3" }
http = "1.3"
http02 = { package = "http", version = "0.2" }
sha1 = "0.10"
base64 = "0.21"
rand = "0.8"
rustls-native-certs = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
ktls-core = { version = "0.0.5", default-features = false, features = ["shim-rustls"] }
ktls-stream = { version = "0.0.5", default-features = false, features = ["async-io-tokio", "shim-rustls"] }

[features]
ffi-test = []

[dev-dependencies]
rcgen = "0.13"
