[package]
name = "ct_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
ct_core = { path = "../ct_core" }
dashmap = "5.5"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
bytes = "1.7"
serde_json = "1.0"
rmp = "0.8"
rmp-serde = "1.3"
serde-value = "0.7"

[lib]
crate-type = ["cdylib", "rlib"]
