[package]
name = "ct_ffi"
version = "0.1.0"
edition = "2021"

[features]
default = []
ffi-test = ["ct_core/ffi-test"]

[dependencies]
ct_core = { path = "../ct_core" }
dashmap = "5.5"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
bytes = "1.7"
serde_json = "1.0"
rmp = "0.8"
rmp-serde = "1.3"
serde-value = "0.7"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "logging"] }
h3 = { version = "0.0.8", default-features = false }
h3-quinn = { version = "0.0.10", default-features = false }
http = "1.3"

[lib]
crate-type = ["cdylib", "rlib"]
