[package]
name = "ct_ffi"
version = "0.1.0"
edition = "2021"

[features]
default = []
ffi-test = ["ct_core/ffi-test", "futures-util"]

[dependencies]
ct_core = { path = "../ct_core" }
dashmap = "5.5"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
bytes = "1.7"
serde_json = "1.0"
serde_cbor = "0.11"
rmp = "0.8"
rmp-serde = "1.3"
serde-value = "0.7"
quinn = { version = "0.11", default-features = false, features = ["rustls", "runtime-tokio"] }
http = "1.3"
http02 = { package = "http", version = "0.2" }
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pemfile = "2.1"
h3 = { version = "0.0.8", default-features = false }
h3-quinn = { version = "0.0.10", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
rcgen = "0.13"
h2 = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[lib]
crate-type = ["cdylib", "rlib"]
